compiler/actonc/test/syntaxerrors/err25.act
# Invalid use of def inside expression
def expr_def():
    x = def inner():
        pass